Guardar las discotecas, reservas y arreglo de muchos fallos